<?xml version="1.0"?>
<package format="2">
  <name>2WD_SLAM</name>
  <version>0.0.0</version>
  <description>The 2WD_SLAM package</description>

  <maintainer email="luwis93@hanyang.ac.kr">Luwis Choi</maintainer>
  <maintainer email="luwis93@hanyang.ac.kr">Jaeho Lee</maintainer>

  <license>MIT</license>

  <!-- Catkin Build Tool Dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS node build dependency -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>map_server</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>map_server</build_export_depend>

  <!-- ROS node execution dependency -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>

  <export>
    <!-- Reference : https://answers.gazebosim.org//question/5072/cant-load-meshes-correcly/ -->
    <!-- Gazebo model path setup for relative pathing in project package (ex: model://PROJECT_NAME/model/model.sdf) -->
    <gazebo_ros
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
